--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -42,6 +42,7 @@ if (Threads_FOUND AND OPENGL_FOUND AND GLUT_FOUND)
   #add_executable(freenect-glview glview.c)
   #add_executable(freenect-regview regview.cpp)
   add_executable(Logger regview.cpp)
+  add_executable(Logger_nowindow regview_nowindow.cpp)
  # add_executable(freenect-hiview hiview.c)
  # add_executable(freenect-chunkview chunkview.c)
  # add_executable(freenect-micview micview.c)
@@ -63,11 +64,24 @@ if (Threads_FOUND AND OPENGL_FOUND AND GLUT_FOUND)
 		${OpenCV_LIBS}
 		${ZLIB_LIBRARY}
   	)
+  target_link_libraries(Logger_nowindow freenect 
+  		${OPENGL_LIBRARIES} 
+  		${GLUT_LIBRARY} 
+  		${CMAKE_THREAD_LIBS_INIT} 
+  		${MATH_LIB}
+  		${BOOST_LIBRARYDIR}
+		${Boost_filesystem_lib}
+		${Boost_system_lib}
+		${Boost_THREAD_LIBRARY}
+		${OpenCV_LIBS}
+		${ZLIB_LIBRARY}
+  	)
  # target_link_libraries(freenect-hiview freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
  # target_link_libraries(freenect-chunkview freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
  # target_link_libraries(freenect-micview freenect ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIB})
 
  install(TARGETS Logger DESTINATION bin)
+ install(TARGETS Logger_nowindow DESTINATION bin)
   #install(TARGETS freenect-glview freenect-regview freenect-hiview freenect-chunkview freenect-micview
   #        DESTINATION bin)
         
